# sklearn-lab

./: .gitignore  pyproject.toml
src/: main.py
